src/styles/preview/PreviewPage.css
.preview-page {
  background-color: var(--preview-page-bg-col);
  box-shadow: var(--box-shadow);
  height: 100%;

  aspect-ratio: var(--preview-page-ar);
  overflow: hidden auto;

  container-type: inline-size;
  container-name: preview-page;

  color: var(--preview-main-text-color);
  font-family: var(--page-font);
}

/* show top/bottom padding when not saving pdf (otherwise, this is already included when saving into pdf) */
.preview-page:not(.printing) {
  padding: 5% 0;
}

/* hide scrollbars when saving pdf*/
.preview-page.printing::-webkit-scrollbar {
  display: none;
}

/* --- NOT WORKING --------------------------------- */
/* .preview-page,
.preview-page * */
p,
h1,
h2,
h3,
h4,
h5,
div,
span,
img,
svg,
li {
  page-break-inside: avoid;
  break-inside: avoid;
}
/* ------------------------------------------------- */

